--- a/Teoria.html
+++ b/Teoria.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React</title>
+    <title>Teoria</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     
 <p>1)Компонента = это функция возвращающая разметку JSX. Также компонента это ТЕГ.</p>
+<p>2) Опасность export default. Опасность является в том, что при экспорте default файл экспортирует не код а сам файл. Тоесть если мы ипортируем функция technologies, но из файла не technologies а Header. То оно импортнет функция Header хотя мы хотели technologies. <br>2.1)Нету привязки к имени. Мы просто импортируем что-то </p>
 
 
 
