added navbar and update App.css

--- a/Teoria.html
+++ b/Teoria.html
@@ -11,6 +11,7 @@
     
 <p>1)Компонента = это функция возвращающая разметку JSX. Также компонента это ТЕГ.</p>
 <p>2) Опасность export default. Опасность является в том, что при экспорте default файл экспортирует не код а сам файл. Тоесть если мы ипортируем функция technologies, но из файла не technologies а Header. То оно импортнет функция Header хотя мы хотели technologies. <br>2.1)Нету привязки к имени. Мы просто импортируем что-то </p>
+<p>3) В React нету class а вместо них className</p>
 
 
 
