--- a/Teoria.html
+++ b/Teoria.html
@@ -12,7 +12,9 @@
 <p>1)Компонента = это функция возвращающая разметку JSX. Также компонента это ТЕГ.</p>
 <p>2) Опасность export default. Опасность является в том, что при экспорте default файл экспортирует не код а сам файл. Тоесть если мы ипортируем функция technologies, но из файла не technologies а Header. То оно импортнет функция Header хотя мы хотели technologies. <br>2.1)Нету привязки к имени. Мы просто импортируем что-то </p>
 <p>3) В React нету class а вместо них className</p>
-
+<p>4) В React если у нас есть одинаковые классы но мы хотим задать стиль только отдельным блокам с таким классом то создаём файл не File.css а File.module.css. И тогда у файлов появится уникальный className и нужно будет изменить в разметку также className с старого на новый с уникальным кодом. 
+    Exp: Был className ="content" а после добавления module.css стал className ="Content_content__GgJDS"; 
+</p>
 
 
     
