--- a/Teoria.html
+++ b/Teoria.html
@@ -13,8 +13,12 @@
 <p>2) Опасность export default. Опасность является в том, что при экспорте default файл экспортирует не код а сам файл. Тоесть если мы ипортируем функция technologies, но из файла не technologies а Header. То оно импортнет функция Header хотя мы хотели technologies. <br>2.1)Нету привязки к имени. Мы просто импортируем что-то </p>
 <p>3) В React нету class а вместо них className</p>
 <p>4) В React если у нас есть одинаковые классы но мы хотим задать стиль только отдельным блокам с таким классом то создаём файл не File.css а File.module.css. И тогда у файлов появится уникальный className и нужно будет изменить в разметку также className с старого на новый с уникальным кодом. 
-    Exp: Был className ="content" а после добавления module.css стал className ="Content_content__GgJDS"; 
+    Exp: Был className ="content" а после добавления module.css стал className ="Content_content__GgJDS";<br>
+    4.1) Чтобы не писать уникальный классы и не искать их в коде. Мы в className пишем className = {nameimport.nameclass}
+    Exp: import s from './Content.module.css'; className={s.content} и оно применит св-тва content из Content.module.css 
 </p>
+
+
 
 
     
